--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "5.1.5",
-    "cds-dbm": "^0.1.2",
-    "cds-pg": "^0.1.35",
-    "express": "^4"
+    "cds-pg": "0.1.30",
+    "express": "^4",
+    "cds-dbm": "^0.0.27"    
   },
   "devDependencies": {
     "mbt": "~1.2.23"
